Fix: minor layout gap issues

--- a/src/app/(home)/_sections/About.module.css
+++ b/src/app/(home)/_sections/About.module.css
@@ -18,8 +18,12 @@
 	}
 
 	@media (width <= 768px) {
-		padding-inline: 1rem;
-		gap: 3rem;
+		padding: 2rem 1rem;
+		gap: 0;
+	}
+
+	@media (width <= 640px) {
+		gap: 4rem;
 	}
 }
 
@@ -48,7 +52,7 @@
 
 	@media (width <= 640px) {
 		flex-direction: column;
-		gap: 4rem;
+		gap: 2rem;
 		width: 100%;
 		align-items: flex-start;
 	}
