--- a/src/app/(home)/_sections/Dwitches.module.css
+++ b/src/app/(home)/_sections/Dwitches.module.css
@@ -16,7 +16,11 @@
 	gap: clamp(1rem, -0.5rem + 3.75vw, 4rem);
 
 	@media (width <= 768px) {
-		padding: 5rem 1rem;
+		padding: 4rem 1rem;
+	}
+
+	@media (width <= 640px) {
+		padding: 2rem 1rem;
 	}
 }
 
@@ -43,6 +47,10 @@
 			width: fit-content;
 			display: flex;
 			order: 1;
+
+			@media (width <= 768px) {
+				margin-left: 2rem;
+			}
 
 			@media (width <= 640px) {
 				order: 2;
